# Cybersecurity-Projects

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: lint.yml  publish-api-rate-limter.yml  publish-caesar-cipher.yml  publish-dns-lookup.yml  update-submodule.yml
PROJECTS/Aenebris/refer/proxy-haskell-research/: streaming-websockets.md
PROJECTS/advanced/ai-threat-detection/dev-log/: simulate.py
PROJECTS/advanced/honeypot-network/: README.md
PROJECTS/advanced/honeypot-network/frontend/: package.json  pnpm-lock.yaml
PROJECTS/advanced/prompt-scan/: .env.example  .gitignore  Dockerfile  LICENSE  compose.yml  pyproject.toml
PROJECTS/advanced/prompt-scan/app/: __init__.py  config.py  main.py
PROJECTS/advanced/prompt-scan/app/plugins/: __init__.py  command_executor.py  file_reader.py
PROJECTS/advanced/prompt-scan/app/utils/: __init__.py  database.py  openai_client.py
PROJECTS/advanced/prompt-scan/learn/: README.md  attack-walkthrough.md  mitigations.md  owasp-llm-overview.md
PROJECTS/advanced/prompt-scan/tests/: attack_payloads.json
PROJECTS/advanced/rveng/frontend/: package.json  pnpm-lock.yaml
PROJECTS/advanced/zig-stateless-scanner/: .gitignore  README.md  build.zig  build.zig.zon
PROJECTS/advanced/zig-stateless-scanner/src/: classify.zig  cli.zig  main.zig  numtheory.zig  output.zig  packet.zig  ratelimit.zig  scancmd.zig  smoke.zig  stealth.zig  targets.zig  template.zig  tx.zig  txcmd.zig  udp.zig
PROJECTS/api-security-scanner/backend/: pyproject.toml
PROJECTS/beginner/hash-cracker/: .gitignore  CMakeLists.txt  README.md  install.sh  main.cpp
PROJECTS/beginner/hash-cracker/tests/: test_engine.cpp  (+5 more)
PROJECTS/beginner/steganography-multi-tool/: .style.yapf  justfile  pyproject.toml
PROJECTS/beginner/steganography-multi-tool/src/stego_multi/: __init__.py  cli.py
PROJECTS/beginner/steganography-multi-tool/src/stego_multi/techniques/: __init__.py  zero_width.py
PROJECTS/beginner/steganography-multi-tool/tests/: test_zero_width.py
PROJECTS/caesar-cipher/: pyproject.toml
PROJECTS/encrypted-p2p-chat/: README.md
PROJECTS/encrypted-p2p-chat/frontend/: package-lock.json  package.json
PROJECTS/keylogger/: pyproject.toml
PROJECTS/metadata-scrubber-tool/: README.md  main.py
PROJECTS/simple-vulnerability-scanner/: README.md
RESOURCES/: README.md
ROADMAPS/: APPLICATION-SECURITY.md  CLOUD-SECURITY-ENGINEER.md  GRC-ANALYST.md  INCIDENT-RESPONDER.md  NETWORK-ENGINEER.md  PENTESTER.md  README.md  SECURITY-ARCHITECT.md  SECURITY-ENGINEER.md  SOC-ANALYST.md  THREAT-INTELLIGENCE-ANALYST.md
SYNOPSES/advanced/: Prompt.Scan.md
docs/plans/: 2026-04-01-credential-enumeration-audit-fixes.md
docs/superpowers/specs/: 2026-04-01-credential-enumeration-design.md
src/: main.py
src/commands/: read.py  scrub.py  verify.py
src/core/: jpeg_metadata.py  png_metadata.py
src/services/: batch_processor.py  image_handler.py  metadata_factory.py  metadata_handler.py
src/utils/: display.py  exceptions.py  formatter.py  get_target_files.py  logger.py
(+80 files in other folders)
